添加消息页和聊天页

--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.0.4",
-	"appid": "wx80cdf4ce1ff90d50",
+	"appid": "wxd9b13481da7fbd5a",
 	"projectname": "%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E7%BD%91%E7%9B%98",
 	"debugOptions": {
 		"hidedInDevtools": []
