--- a/app.json
+++ b/app.json
@@ -2,7 +2,10 @@
   "pages": [
     "pages/main/main",
     "pages/index/index",
-    "pages/logs/logs"
+    "pages/logs/logs",
+    "pages/message/message",
+    "pages/chat/chat",
+    "components/bubble/bubble"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -25,7 +28,7 @@
       {
         "selectedIconPath": "images/消息_focus.png",
         "iconPath": "images/消息.png",
-        "pagePath": "pages/logs/logs",
+        "pagePath": "pages/message/message",
         "text": "消息"
       },
       {
